<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bgcolor">
    <cn.life3t.life3t.common.CommonTitle_
        android:id="@+id/common_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/login"
        app:enable_back="@drawable/btn_back"
        app:custom_btn_text="@string/register"
        />
    <cn.life3t.life3t.common.ClearEditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/edit_top"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:inputType="phone"
        android:hint="@string/hint_account"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_divider"/>
    <cn.life3t.life3t.common.ClearEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_bottom"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="14dp"
        android:layout_gravity="right"
        android:gravity="center"
        android:paddingRight="14dp"
        android:text="@string/forget_password"
        android:textSize="16sp"
        android:textColor="@color/hyperlink" />
    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/btn_confirm_selector"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
</LinearLayout>