<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bgcolor">
    <cn.life3t.life3t.common.CommonTitle_
        android:id="@+id/common_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/get_password"
        app:enable_back="@drawable/btn_back"
        />
    <cn.life3t.life3t.common.ClearEditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/edit_top"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:inputType="phone"
        android:hint="@string/hint_account"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edit_bottom"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:gravity="center_vertical">
        <cn.life3t.life3t.common.ClearEditText
            android:id="@+id/verify_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@null"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:inputType="number"
            android:hint="@string/hint_verify_code"
            />
        <TextView
            android:id="@+id/get_verify_code"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:background="@drawable/btn_verify_selector"
            android:gravity="center"
            android:text="@string/get_verify_code"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:inputType="number"/>
    </LinearLayout>

    <TextView
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="54dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/btn_confirm_selector"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
</LinearLayout>